Remove deprecated code. (#179)
* Remove deprecated code.

* update versions

* Minor updates